--- a/console.html
+++ b/console.html
@@ -10,6 +10,27 @@
   </head>
 
   <body>
+      <nav class = "navbar-custom">
+      <div class = "container">
+        <div class = "navbar-header">
+          <button type = "button" class = "navbar-toggle"
+          data-toggle="collapse" data-target = "#myNav">
+            <span class = "sr-only">Toggle Navigation</span>
+            <span class = "glyphicon glyphicon-menu-hamburger"></span>
+            <span class = "menu">Menu</span>
+          </button>
+          <a class = "navbar-brand-custom" href = "index.html">Mama</a>
+        </div>
+        <div class = "navbar-right" class = "collapse navbar-collapse">
+          <ul class = "nav navbar-nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="survey.html">Join Us</a></li>
+            <li><a href="training.html">Training</a></li>
+            <li><a href="console.html">Console</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     
   </body>
 </html>
