--- a/index.html
+++ b/index.html
@@ -1,37 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset=utf-8>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script type = "text/javascript" src="js/jquery.min.js"></script>
-    <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-  </head>
+<html lang="en">
+<link rel="stylesheet" href="css/main.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <header>
+        <img src="img/logo.png" id="logo">
+    </header>
+</head>
+<body>
+<div class="image"><img src="img/graphic1.png"></div>
+<div class="text">Mama connects young refugee mothers to knowledgeable medical volunteers.</div>
 
-  <body>
-    <nav class = "navbar-custom">
-      <div class = "container">
-        <div class = "navbar-header">
-          <button type = "button" class = "navbar-toggle"
-          data-toggle="collapse" data-target = "#myNav">
-            <span class = "sr-only">Toggle Navigation</span>
-            <span class = "glyphicon glyphicon-menu-hamburger"></span>
-            <span class = "menu">Menu</span>
-          </button>
-          <a class = "navbar-brand-custom" href = "index.html">Mama</a>
-        </div>
-        <div class = "navbar-right" class = "collapse navbar-collapse">
-          <ul class = "nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="survey.html">Join Us</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="console.html">Console</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  
-    
-  </body>
+<footer><a href="page-two.html" class="right">Next</a></footer>
+</body>
 </html>
