--- a/survey.html
+++ b/survey.html
@@ -5,33 +5,18 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script type = "text/javascript" src="js/jquery.min.js"></script>
     <script type = "text/javascript" src="js/bootstrap.min.js"></script>
   </head>
 
   <body>
-    <nav class = "navbar-custom">
-      <div class = "container">
-        <div class = "navbar-header">
-          <button type = "button" class = "navbar-toggle"
-          data-toggle="collapse" data-target = "#myNav">
-            <span class = "sr-only">Toggle Navigation</span>
-            <span class = "glyphicon glyphicon-menu-hamburger"></span>
-            <span class = "menu">Menu</span>
-          </button>
-          <a class = "navbar-brand-custom" href = "index.html">Mama</a>
-        </div>
-        <div class = "navbar-right" class = "collapse navbar-collapse">
-          <ul class = "nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="survey.html">Join Us</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="console.html">Console</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  
-    
+
+    <!-- Change the width and height values to suit you best -->
+<!-- Change the width and height values to suit you best -->
+<div class="typeform-widget" data-url="https://katezellmer1.typeform.com/to/sjYT8i" data-text="Hello Mama Volunteer Form" style="width:100%;height:500px;"></div>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+<div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"></div>
+
   </body>
 </html>
