--- a/training.html
+++ b/training.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <script type = "text/javascript" src="js/jquery.min.js"></script>
     <script type = "text/javascript" src="js/bootstrap.min.js"></script>
   </head>
