--- a/page-three.html
+++ b/page-three.html
@@ -9,7 +9,7 @@
     </header>
 </head>
 <body>
-<div class="image"><p class="paragraph">Ready to become a volunteer?<br><a href><u> Register today.</u></a></p></div>
+<div class="image"><p class="paragraph">Ready to become a volunteer?<br><a href="survey.html"><u> Register today.</u></a></p></div>
 <div class="text">Already a registered volunteer? <u>Sign in here.</u></div>
 
 <footer><a href="page-two.html" class="left">Back</a></footer>
