--- a/survey.html
+++ b/survey.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset=utf-8>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <script type = "text/javascript" src="js/jquery.min.js"></script>
-    <script type = "text/javascript" src="js/bootstrap.min.js"></script>
-  </head>
-
-  <body>
+<html lang="en">
+<link rel="stylesheet" href="css/main.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <header>
+        <img src="img/logo.png" id="logo">
+    </header>
+</head>
+<body>
 
     <!-- Change the width and height values to suit you best -->
 <!-- Change the width and height values to suit you best -->
