--- a/console/index.html
+++ b/console/index.html
@@ -13,55 +13,60 @@
 </head>
 
 <body>
+
+<!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
+<header>
+    <div class = "logo"><img src="logo.png" alt="Logo" style="width:150px;height:60px;"></div>
+
+</header>
   <div class="wrapper">
     <div class="container">
         <div class="left">
-            <div class="top">
+           <!-- <div class="top">
                 <input type="text" />
                 <a href="javascript:;" class="search"></a>
-            </div>
+            </div> -->
             <ul class="people">
                 <li class="person" data-chat="person1">
-                    <img src="https://s13.postimg.org/ih41k9tqr/img1.jpg" alt="" />
-                    <span class="name">Thomas Bangalter</span>
+                    <span class="name">#320</span>
+                    <p> breastfeeding, latching </p>                    
                     <span class="time">2:09 PM</span>
-                    <span class="preview">I was wondering...</span>
+                    <span class="preview">📍 Kilis Öncüpınar, Turkey</span>
                 </li>
                 <li class="person" data-chat="person2">
-                    <img src="https://s3.postimg.org/yf86x7z1r/img2.jpg" alt="" />
-                    <span class="name">Dog Woofson</span>
+                    <span class="name">#62</span>
+                    <p> illness </p>
                     <span class="time">1:44 PM</span>
-                    <span class="preview">I've forgotten how it felt before</span>
+                    <span class="preview">📍 Zaatari, Jordan</span>
                 </li>
                 <li class="person" data-chat="person3">
-                    <img src="https://s3.postimg.org/h9q4sm433/img3.jpg" alt="" />
-                    <span class="name">Louis CK</span>
+                    <span class="name">#[number]</span>
+                    <p> [issue] </p>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">But we’re probably gonna need a new carpet.</span>
+                    <span class="preview">📍 [location]</span>
                 </li>
                 <li class="person" data-chat="person4">
-                    <img src="https://s3.postimg.org/quect8isv/img4.jpg" alt="" />
-                    <span class="name">Bo Jackson</span>
+                    <span class="name">#[number]</span>
+                    <p> [issue] </p>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">It’s not that bad...</span>
+                    <span class="preview">📍 [location]</span>
                 </li>
                 <li class="person" data-chat="person5">
-                    <img src="https://s16.postimg.org/ete1l89z5/img5.jpg" alt="" />
-                    <span class="name">Michael Jordan</span>
+                    <span class="name">#[number]</span>
+                    <p> [issue] </p>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">Wasup for the third time like is 
-you bling bitch</span>
+                    <span class="preview">📍 [location]</span>
                 </li>
                 <li class="person" data-chat="person6">
-                    <img src="https://s30.postimg.org/kwi7e42rh/img6.jpg" alt="" />
-                    <span class="name">Drake</span>
+                    <span class="name">#[number]</span>
+                    <p> [issue] </p>
                     <span class="time">2:09 PM</span>
-                    <span class="preview">howdoyoudoaspace</span>
+                    <span class="preview">📍 [location]</span>
                 </li>
             </ul>
         </div>
         <div class="right">
-            <div class="top"><span>To: <span class="name">Dog Woofson</span></span></div>
+            <div class="top"><span>To: <span class="name">#320</span></span></div>
             <div class="chat" data-chat="person1">
                 <div class="conversation-start">
                     <span>Today, 6:48 AM</span>
@@ -195,6 +200,7 @@ you bling bitch</span>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/index.js"></script>
+    <script src="js/index2.js"></script>
 
 </body>
 </html>
