--- a/survey.html
+++ b/survey.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <header>
+        <a href = "index.html">
         <img src="img/logo.png" id="logo">
     </header>
 </head>
