--- a/console/index.html
+++ b/console/index.html
@@ -16,7 +16,8 @@
 
 <!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
 <header>
-    <div class = "logo"><img src="logo.png" alt="Logo" style="width:150px;height:60px;"></div>
+    <div class="logo"><img src="logo.png" class="Logo" style="width:150px;height:60px;"></div>
+    <div class="user">Esmeralda M. <img src="img/icon.png"></div>
 
 </header>
   <div class="wrapper">
@@ -28,40 +29,40 @@
             </div> -->
             <ul class="people">
                 <li class="person" data-chat="person1">
-                    <span class="name">#320</span>
+                    <span class="name"># 320</span>
                     <p> breastfeeding, latching </p>                    
-                    <span class="time">2:09 PM</span>
+                    <span class="time">14:09</span>
                     <span class="preview">📍 Kilis Öncüpınar, Turkey</span>
                 </li>
                 <li class="person" data-chat="person2">
-                    <span class="name">#62</span>
+                    <span class="name"># 62</span>
                     <p> illness </p>
-                    <span class="time">1:44 PM</span>
+                    <span class="time">14:40</span>
                     <span class="preview">📍 Zaatari, Jordan</span>
                 </li>
                 <li class="person" data-chat="person3">
-                    <span class="name">#[number]</span>
-                    <p> [issue] </p>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">📍 [location]</span>
+                    <span class="name"># 500</span>
+                    <p> teething </p>
+                    <span class="time">14:46</span>
+                    <span class="preview">📍 Mrajeeb Al Fhood, Jordan</span>
                 </li>
                 <li class="person" data-chat="person4">
-                    <span class="name">#[number]</span>
-                    <p> [issue] </p>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">📍 [location]</span>
+                    <span class="name"># 9</span>
+                    <p> breastfeeding </p>
+                    <span class="time">15:06</span>
+                    <span class="preview">📍 Al Kharaz, Yemen</span>
                 </li>
                 <li class="person" data-chat="person5">
-                    <span class="name">#[number]</span>
-                    <p> [issue] </p>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">📍 [location]</span>
+                    <span class="name"># 23</span>
+                    <p> vomiting </p>
+                    <span class="time">15:10</span>
+                    <span class="preview">📍 Zaatari, Jordan</span>
                 </li>
                 <li class="person" data-chat="person6">
-                    <span class="name">#[number]</span>
-                    <p> [issue] </p>
-                    <span class="time">2:09 PM</span>
-                    <span class="preview">📍 [location]</span>
+                    <span class="name"># 98</span>
+                    <p> breastfeeding </p>
+                    <span class="time">14:19</span>
+                    <span class="preview">📍 Zaatari, Jordan</span>
                 </li>
             </ul>
         </div>
@@ -72,13 +73,10 @@
                     <span>Today, 6:48 AM</span>
                 </div>
                 <div class="bubble you">
-                    Hello,
+                    Hi
                 </div>
                 <div class="bubble you">
-                    it's me.
-                </div>
-                <div class="bubble you">
-                    I was wondering...
+                    My baby is not latching when I try to breastfeed. What should I do?
                 </div>
             </div>
             <div class="chat" data-chat="person2">
