--- a/console/index.html
+++ b/console/index.html
@@ -14,9 +14,8 @@
 
 <body>
 
-<!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
 <header>
-    <div class="logo"><img src="console/img/logo.png" class="Logo" style="width:150px;height:60px;"></div>
+    <div class="logo"><img src="http://shubhaswamy.com/CHIMEHACK4/console/img/logo.png" class="Logo" style="width:150px;height:60px;"></div>
     <div class="user">Esmeralda M. <img src="console/img/icon.png"></div>
 
 </header>
