--- a/console/index.html
+++ b/console/index.html
@@ -16,7 +16,7 @@
 
 <header>
     <div class="logo"><img src="http://shubhaswamy.com/CHIMEHACK4/console/img/logo.png" class="Logo" style="width:100px;height:60px;"></div>
-    <div class="user">Esmeralda M. <img src="console/img/icon.png"></div>
+    <div class="user">Esmeralda M. <img src="http://shubhaswamy.com/CHIMEHACK4/console/img/icon.png"></div>
 
 </header>
   <div class="wrapper">
