--- a/console/index.html
+++ b/console/index.html
@@ -14,9 +14,10 @@
 
 <body>
 
+<!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
 <header>
-    <div class="logo"><img src="http://shubhaswamy.com/CHIMEHACK4/console/img/logo.png" class="Logo" style="width:100px;height:60px;"></div>
-    <div class="user">Esmeralda M. <img src="http://shubhaswamy.com/CHIMEHACK4/console/img/icon.png"></div>
+    <div class="logo"><img src="logo.png" class="Logo" style="width:150px;height:60px;"></div>
+    <div class="user">Esmeralda M. <img src="img/icon.png"></div>
 
 </header>
   <div class="wrapper">
@@ -29,38 +30,38 @@
             <ul class="people">
                 <li class="person" data-chat="person1">
                     <span class="name"># 320</span>
-                    <p> breastfeeding, latching </p>                    
-                    <span class="time">14:09</span>
+                    <p> Breastfeeding, Latching </p>                    
+                    <span class="time">6:48</span>
                     <span class="preview">📍 Kilis Öncüpınar, Turkey</span>
                 </li>
                 <li class="person" data-chat="person2">
                     <span class="name"># 62</span>
-                    <p> illness </p>
-                    <span class="time">14:40</span>
+                    <p> Illness </p>
+                    <span class="time">17:38</span>
                     <span class="preview">📍 Zaatari, Jordan</span>
                 </li>
                 <li class="person" data-chat="person3">
-                    <span class="name"># 500</span>
-                    <p> teething </p>
-                    <span class="time">14:46</span>
-                    <span class="preview">📍 Mrajeeb Al Fhood, Jordan</span>
+                    <span class="name"># 213</span>
+                    <p> Blood in urine </p>
+                    <span class="time">3:38</span>
+                    <span class="preview">📍 Alger, Algeria</span>
                 </li>
                 <li class="person" data-chat="person4">
-                    <span class="name"># 9</span>
-                    <p> breastfeeding </p>
-                    <span class="time">15:06</span>
-                    <span class="preview">📍 Al Kharaz, Yemen</span>
+                    <span class="name"># 199</span>
+                    <p> Feeling depressed </p>
+                    <span class="time">16:20</span>
+                    <span class="preview">📍 Beirut, Lebanon</span>
                 </li>
                 <li class="person" data-chat="person5">
-                    <span class="name"># 23</span>
-                    <p> vomiting </p>
-                    <span class="time">15:10</span>
-                    <span class="preview">📍 Zaatari, Jordan</span>
+                    <span class="name"># 500</span>
+                    <p> Teething </p>
+                    <span class="time">6:28</span>
+                    <span class="preview">📍 Mrajeeb Al Fhood, Jordan</span>
                 </li>
                 <li class="person" data-chat="person6">
-                    <span class="name"># 98</span>
-                    <p> breastfeeding </p>
-                    <span class="time">14:19</span>
+                    <span class="name"># 23</span>
+                    <p> Vomiting </p>
+                    <span class="time">13:27</span>
                     <span class="preview">📍 Zaatari, Jordan</span>
                 </li>
             </ul>
@@ -83,22 +84,10 @@
                     <span>Today, 5:38 PM</span>
                 </div>
                 <div class="bubble you">
-                    Hello, can you hear me?
+                    Hello
                 </div>
                 <div class="bubble you">
-                    I'm in California dreaming
-                </div>
-                <div class="bubble me">
-                    ... about who we used to be.
-                </div>
-                <div class="bubble me">
-                    Are you serious?
-                </div>
-                <div class="bubble you">
-                    When we were younger and free...
-                </div>
-                <div class="bubble you">
-                    I've forgotten how it felt before
+                    My newborn baby seems to have a fever. How do I lower his temperature?
                 </div>
             </div>
             <div class="chat" data-chat="person3">
@@ -106,48 +95,24 @@
                     <span>Today, 3:38 AM</span>
                 </div>
                 <div class="bubble you">
-                    Hey human!
-                </div>
-                <div class="bubble you">
-                    Umm... Someone took a shit in the hallway.
+                    I am pregnant and have blood in my urine. Should I be concerned?
                 </div>
                 <div class="bubble me">
-                    ... what.
-                </div>
-                <div class="bubble me">
-                    Are you serious?
-                </div>
-                <div class="bubble you">
-                    I mean...
-                </div>
-                <div class="bubble you">
-                    It’s not that bad...
-                </div>
-                <div class="bubble you">
-                    But we’re probably gonna need a new carpet.
+                    Bleeding is relatively common during pregnancy, but it is best to have local medical authorities take some tests to make sure everything is okay.
                 </div>
             </div>
             <div class="chat" data-chat="person4">
                 <div class="conversation-start">
                     <span>Yesterday, 4:20 PM</span>
                 </div>
-                <div class="bubble me">
-                    Hey human!
-                </div>
-                <div class="bubble me">
-                    Umm... Someone took a shit in the hallway.
+                <div class="bubble you">
+                    Hello
                 </div>
                 <div class="bubble you">
-                    ... what.
-                </div>
-                <div class="bubble you">
-                    Are you serious?
+                    I have been feeling very sad since I gave birth to my baby. I have never felt like this before. What should I do? I don't like this feeling
                 </div>
                 <div class="bubble me">
-                    I mean...
-                </div>
-                <div class="bubble me">
-                    It’s not that bad...
+                    Hi. There are some resources in your area. It would be best for you to see a local professional. You can contact the following services:
                 </div>
             </div>
             <div class="chat" data-chat="person5">
@@ -155,13 +120,13 @@
                     <span>Today, 6:28 AM</span>
                 </div>
                 <div class="bubble you">
-                    Wasup
+                    Hello
                 </div>
                 <div class="bubble you">
-                    Wasup
+                    My baby seems to be getting her first teeth and is crying nonstop. Is there anything I can do in this case?
                 </div>
-                <div class="bubble you">
-                    Wasup for the third time like is <br />you blind bitch
+                <div class="bubble me">
+                    Hi. You can alleviate some of your baby's pain from her sore gums by using some of the following teething remedies:
                 </div>
 
             </div>
@@ -170,19 +135,10 @@
                     <span>Monday, 1:27 PM</span>
                 </div>
                 <div class="bubble you">
-                    So, how's your new phone?
-                </div>
-                <div class="bubble you">
-                    You finally have a smartphone :D
+                    My toddler keeps vomiting her food. What can I do?
                 </div>
                 <div class="bubble me">
-                    Drake?
-                </div>
-                <div class="bubble me">
-                    Why aren't you answering?
-                </div>
-                <div class="bubble you">
-                    howdoyoudoaspace
+                    Your toddler can potentially have the stomach flu. It is recommended that you take them to a local medical professional to see the cause of their vomiting and to better provide a cure or treatment.
                 </div>
             </div>
             <div class="write">
