--- a/console/index.html
+++ b/console/index.html
@@ -13,11 +13,9 @@
 </head>
 
 <body>
-
-<!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
 <header>
-    <div class="logo"><img src="img/logo.png"></div>
-    <div class="user">Esmeralda M. <img src="img/icon.png"></div>
+    <div><img src="img/logo.png" class="logo"></div>
+    <div>Esmeralda M. <img src="img/icon.png" class="user"></div>
 
 </header>
   <div class="wrapper">
