--- a/console/index.html
+++ b/console/index.html
@@ -14,8 +14,8 @@
 
 <body>
 <header>
-    <div><img src="img/logo.png" class="logo"></div>
-    <div>Esmeralda M. <img src="img/icon.png" class="user"></div>
+    <div><img src="img/logo.png" class="logo" height="75" width="42"></div>
+    <div>Esmeralda M. <img src="img/icon.png" class="user" height="50" width="50"></div>
 
 </header>
   <div class="wrapper">
