--- a/console/index.html
+++ b/console/index.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div><img src="img/logo.png" class="logo" height="100" width="75"></div>
-    <div>Esmeralda M. <img src="img/icon.png" class="user" height="50" width="50"></div>
+    <div class="user">Esmeralda M. <img src="img/icon.png" height="50" width="55"></div>
 
 </header>
   <div class="wrapper">
