--- a/page-three.html
+++ b/page-three.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="image"><p class="paragraph">Ready to become a volunteer?<br><a href="survey.html"><u> Register today.</u></a></p></div>
-<div class="text">Already a registered volunteer? <u>Sign in here.</u></div>
+<div class="text">Already a registered volunteer? <a href="http://shubhaswamy.com/CHIMEHACK4/console/index.html">Sign in here.</a></div>
 
 <footer><a href="page-two.html" class="left">Back</a></footer>
 </body>
