--- a/console/index.html
+++ b/console/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-<header>
-    <div><img src="img/logo.png" class="logo" height="100" width="75"></div>
 
+<!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
+<header>
+    <div class="logo"><img src="logo.png" class="Logo" style="width:150px;height:60px;"></div>
+    <div class="user">Esmeralda M. <img src="img/icon.png"></div>
 
 </header>
   <div class="wrapper">
@@ -71,10 +73,6 @@
                     <span>Today, 6:48 AM</span>
                 </div>
                 <div class="bubble you">
-                    Hi
-                </div>
-                <div class="bubble you">
-                    My baby is not latching when I try to breastfeed. What should I do?
                 </div>
             </div>
             <div class="chat" data-chat="person2">
@@ -152,6 +150,7 @@
 
     <script src="js/index.js"></script>
     <script src="js/index2.js"></script>
+    <script src="js/dataTest.js"></script>
 
 </body>
 </html>
