--- a/console/index.html
+++ b/console/index.html
@@ -14,10 +14,8 @@
 
 <body>
 
-<!--<div class = "logo"><img src="logo.png" alt="Logo" style="width:200px;height:90px;"></div> -->
 <header>
-    <div class="logo"><img src="logo.png" class="Logo" style="width:150px;height:60px;"></div>
-    <div class="user">Esmeralda M. <img src="img/icon.png"></div>
+       <div><img src="img/logo.png" class="logo" height="100" width="75"></div>
 
 </header>
   <div class="wrapper">
